BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/VSB_Prolifiq_Request_BMS__c.object
<CustomObject>
    <fields>
        <fullName>Date_BMS__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HCP_Account_ID_BMS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HCP Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>VSB Prolifiq Request</relationshipLabel>
        <relationshipName>VSB_Prolifiq_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HCP_Email_BMS__c</fullName>
        <label>HCP Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Rep_BMS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>VSB_Prolifiq_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_BMS__c</fullName>
        <label>Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_BMS__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Prolifiq</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfilled by Prolifiq</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception State</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>VSB Prolifiq Request</label>
    <nameField>
        <displayFormat>VPR-{00000000}</displayFormat>
        <label>VSB Prolifiq Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VSB Prolifiq Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>